--- a/Pages/estilospage.css
+++ b/Pages/estilospage.css
@@ -1,10 +1,18 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
 h2 {
 	border: 2px solid #fff;
 	color: rgb(100, 100, 100);
 	font-family: calibri;
-	font-size: 1.2rem;
+	font-size: 2rem;
 	padding: 12px;
 	text-decoration: none
+	
 }
 
 p {
@@ -81,7 +89,7 @@ footer {
 	font-size: small;
 	font-style: italic;
 	text-decoration: underline;
-	margin-top: 40%;
+	margin-top: 1%; 
 }
 
 .redes {
@@ -123,12 +131,20 @@ h1 {
 
 section {
 	font-size: x-large;
-	margin-left: 10%;
+	margin-left: 0,05%;
+	margin-right: 0,05%;
+	box-sizing: content-box;
 	border-color: #033a28;
 }
+section form{
+	margin-left: 5%;
+}
 
-.form-group {
-	margin-right: 60%;
+div textarea{
+	margin-left: 5%;
+}
+div label{
+	margin-left: 5%;
 }
 
 .card {
@@ -139,36 +155,29 @@ section {
 	background-color: hsl(182, 66%, 44%);
 }
 
-
 /* -----Sobre Nosotros GRID------------------------ */
-.card2 {
-	border-style: double;
-}
-
 .nosotros2 {
 	width: 100%;
 	height:auto;
-	background-color: black;
 }
 
 .nleft {
-	height: 300px;
-	width: 100%;
+	height: 400px;
+	width: 600px;
 	background-image: url(../multimedia/chicaconhilos.jpeg);
-	background-position: center;
+	/* background-position: center; */
 	background-size: cover;
 }
 
 .nright {
 	height: auto;
 	width: 100%;
-	background-color: springgreen;
-	padding: 20px;
+	/* padding: 10px; */
 }
 
 .nright h3 {
-	font-size: 27px;
-	font-family: 'Roboto', sans-serif;
+	font-size: 15px;
+	font-family:'Lucida Sans';
 	margin-bottom: 20px;
 	color: #fff;
 	text-shadow: 0 0 5px #000,
@@ -177,20 +186,126 @@ section {
 .nright p {
 	text-align: justify;
 	margin-bottom: 20px;
-	font-family: 'Open Sans', sans-serif;
+	font-family:'Lucida Sans';
 	font-weight: bold;
+	font-size: medium;
 }
 
 .boton1 {
-	background-color: #000;
-	padding: 10px 20px;
-	color: #fff;
+	background-color:#00d089;
+	padding: 10px 10px;
+	color:black;
 	text-decoration: none;
-	font-family: 'Oswald', sans-serif
+	font-family:'Lucida Sans', sans-serif;
+	size-adjust: 20%;
+	font-size: medium;
+	font-style:normal;
 }
 
 .boton1:hover {
 	background-color: springgreen;
 	text-shadow: 0 0 5px #000;
 	transition: all 1.5s;
+}
+
+.mision{
+    width: 100%;
+    height: auto;
+    background-color: #333;
+    display: flex;
+    justify-content:space-between;
+    /* padding-right: 0; */
+	padding-top: 10px;
+	box-sizing:unset;
+}
+
+.card3{
+    min-height: 350px;
+    width: 30%;
+    background-color:hsla(170, 89%, 31%, 0.549);
+    border: 5px solid #000;
+    text-align: center;
+    transition: all 0.2s;
+}
+
+.card3:hover{
+    transform: scale(1.09);
+    transition: all 0.9s;
+    /* box-shadow: 0 0 10px 5px #fff; */
+    border-radius: 10px;
+}
+
+.card-img3{
+    height: 150px;
+    width: 100%;
+    background-color: gray;
+    background-image: url(../multimedia/AdobeStock_14721611_Preview.jpeg);
+    background-size: cover;
+    background-position: center;
+}
+.card-img31{
+    height: 150px;
+    width: 100%;
+    background-color: gray;
+    background-image: url(../multimedia/AdobeStock_201320952_Preview.jpeg);
+    background-size: cover;
+    background-position: center;
+}
+.card-img32{
+    height: 150px;
+    width: 100%;
+    background-color: gray;
+    background-image: url(../multimedia/AdobeStock_577525298_Preview.jpeg);
+    background-size: cover;
+    background-position: center;
+}
+
+.card-img34{
+    height: 150px;
+    width: 100%;
+    background-color: gray;
+    background-image: url(../multimedia/prendasdibujo.jpeg);
+    background-size: cover;
+    background-position: center;
+}
+.card3 h3{
+    font-size: 30px;
+    color: #fff;
+    text-shadow: 2px 2px 5px #000;
+}
+
+.card3 p{
+    text-align: center;
+    padding: 20px;
+	color: hsla(0, 0%, 100%, 0.372);
+}
+
+.mapa{
+    justify-content:center;
+    padding: 100px;
+	width: 100%;
+    height: auto;
+    background-color:aliceblue;
+    display: flex;
+    box-sizing:unset;
+}
+.card4{
+    min-height: 400px;
+    width: 40%;
+    background-color:hsla(172, 48%, 6%, 0.199);
+    border: 5px solid #000;
+    text-align: center;
+	margin-top: 50px;
+}
+
+.card4 h3{
+    font-size: 30px;
+    color: black;
+    text-shadow: 2px 2px 5px #000;
+}
+
+.card4 p{
+    text-align: center;
+	color: black;
+    padding: 10px;
 }
