--- a/pages/estilospage.css
+++ b/pages/estilospage.css
@@ -1,7 +1,7 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
 
@@ -12,7 +12,6 @@ h2 {
 	font-size: 2rem;
 	padding: 12px;
 	text-decoration: none
-	
 }
 
 p {
@@ -59,6 +58,10 @@ h1 {
 	margin-right: 20%;
 }
 
+arousel-item active {
+	background-image: url(../multimedia/Tienda1.jpeg);
+}
+
 .carousel-control-prev {
 	background-color: grey;
 	display: grid;
@@ -89,7 +92,7 @@ footer {
 	font-size: small;
 	font-style: italic;
 	text-decoration: underline;
-	margin-top: 1%; 
+	margin-top: 1%;
 }
 
 .redes {
@@ -131,19 +134,21 @@ h1 {
 
 section {
 	font-size: x-large;
-	margin-left: 0,05%;
-	margin-right: 0,05%;
+	margin-left: 0, 05%;
+	margin-right: 0, 05%;
 	box-sizing: content-box;
 	border-color: #033a28;
 }
-section form{
+
+section form {
 	margin-left: 5%;
 }
 
-div textarea{
+div textarea {
 	margin-left: 5%;
 }
-div label{
+
+div label {
 	margin-left: 5%;
 }
 
@@ -158,7 +163,7 @@ div label{
 /* -----Sobre Nosotros GRID------------------------ */
 .nosotros2 {
 	width: 100%;
-	height:auto;
+	height: auto;
 }
 
 .nleft {
@@ -177,7 +182,7 @@ div label{
 
 .nright h3 {
 	font-size: 15px;
-	font-family:'Lucida Sans';
+	font-family: 'Lucida Sans';
 	margin-bottom: 20px;
 	color: #fff;
 	text-shadow: 0 0 5px #000,
@@ -186,20 +191,20 @@ div label{
 .nright p {
 	text-align: justify;
 	margin-bottom: 20px;
-	font-family:'Lucida Sans';
+	font-family: 'Lucida Sans';
 	font-weight: bold;
 	font-size: medium;
 }
 
 .boton1 {
-	background-color:#00d089;
+	background-color: #00d089;
 	padding: 10px 10px;
-	color:black;
+	color: black;
 	text-decoration: none;
-	font-family:'Lucida Sans', sans-serif;
+	font-family: 'Lucida Sans', sans-serif;
 	size-adjust: 20%;
 	font-size: medium;
-	font-style:normal;
+	font-style: normal;
 }
 
 .boton1:hover {
@@ -208,104 +213,287 @@ div label{
 	transition: all 1.5s;
 }
 
-.mision{
-    width: 100%;
-    height: auto;
-    background-color: #333;
-    display: flex;
-    justify-content:space-between;
-    /* padding-right: 0; */
+.mision {
+	width: 100%;
+	height: auto;
+	background-color: #333;
+	display: flex;
+	justify-content: space-between;
+	/* padding-right: 0; */
 	padding-top: 10px;
-	box-sizing:unset;
+	box-sizing: unset;
 }
 
-.card3{
-    min-height: 350px;
-    width: 30%;
-    background-color:hsla(170, 89%, 31%, 0.549);
-    border: 5px solid #000;
-    text-align: center;
-    transition: all 0.2s;
+.card3 {
+	min-height: 350px;
+	width: 30%;
+	background-color: hsla(170, 89%, 31%, 0.549);
+	border: 5px solid #000;
+	text-align: center;
+	transition: all 0.2s;
 }
 
-.card3:hover{
-    transform: scale(1.09);
-    transition: all 0.9s;
-    /* box-shadow: 0 0 10px 5px #fff; */
-    border-radius: 10px;
+.card3:hover {
+	transform: scale(1.09);
+	transition: all 0.9s;
+	/* box-shadow: 0 0 10px 5px #fff; */
+	border-radius: 10px;
 }
 
-.card-img3{
-    height: 150px;
-    width: 100%;
-    background-color: gray;
-    background-image: url(../multimedia/AdobeStock_14721611_Preview.jpeg);
-    background-size: cover;
-    background-position: center;
-}
-.card-img31{
-    height: 150px;
-    width: 100%;
-    background-color: gray;
-    background-image: url(../multimedia/AdobeStock_201320952_Preview.jpeg);
-    background-size: cover;
-    background-position: center;
-}
-.card-img32{
-    height: 150px;
-    width: 100%;
-    background-color: gray;
-    background-image: url(../multimedia/AdobeStock_577525298_Preview.jpeg);
-    background-size: cover;
-    background-position: center;
+.card-img3 {
+	height: 150px;
+	width: 100%;
+	background-color: gray;
+	background-image: url(../multimedia/AdobeStock_14721611_Preview.jpeg);
+	background-size: cover;
+	background-position: center;
 }
 
-.card-img34{
-    height: 150px;
-    width: 100%;
-    background-color: gray;
-    background-image: url(../multimedia/prendasdibujo.jpeg);
-    background-size: cover;
-    background-position: center;
-}
-.card3 h3{
-    font-size: 30px;
-    color: #fff;
-    text-shadow: 2px 2px 5px #000;
+.card-img31 {
+	height: 150px;
+	width: 100%;
+	background-color: gray;
+	background-image: url(../multimedia/AdobeStock_201320952_Preview.jpeg);
+	background-size: cover;
+	background-position: center;
 }
 
-.card3 p{
-    text-align: center;
-    padding: 20px;
+.card-img32 {
+	height: 150px;
+	width: 100%;
+	background-color: gray;
+	background-image: url(../multimedia/AdobeStock_577525298_Preview.jpeg);
+	background-size: cover;
+	background-position: center;
+}
+
+.card-img34 {
+	height: 150px;
+	width: 100%;
+	background-color: gray;
+	background-image: url(../multimedia/prendasdibujo.jpeg);
+	background-size: cover;
+	background-position: center;
+}
+
+.card3 h3 {
+	font-size: 30px;
+	color: #fff;
+	text-shadow: 2px 2px 5px #000;
+}
+
+.card3 p {
+	text-align: center;
+	padding: 20px;
 	color: hsla(0, 0%, 100%, 0.372);
 }
 
-.mapa{
-    justify-content:center;
-    padding: 100px;
+.mapa {
+	justify-content: center;
+	padding: 100px;
 	width: 100%;
-    height: auto;
-    background-color:aliceblue;
-    display: flex;
-    box-sizing:unset;
-}
-.card4{
-    min-height: 400px;
-    width: 40%;
-    background-color:hsla(172, 48%, 6%, 0.199);
-    border: 5px solid #000;
-    text-align: center;
-	margin-top: 50px;
+	height: auto;
+	background-color: aliceblue;
+	display: flex;
+	box-sizing: unset;
 }
 
-.card4 h3{
-    font-size: 30px;
-    color: black;
-    text-shadow: 2px 2px 5px #000;
+.card4 {
+	min-height: 400px;
+	width: 500px;
+	/* height: 500px; */
+	background-color: hsla(172, 48%, 6%, 0.199);
+	border: 5px solid #000;
+	text-align: center;
+	margin-top: 30px;
 }
 
-.card4 p{
-    text-align: center;
+.card4 h3 {
+	font-size: 40px;
 	color: black;
-    padding: 10px;
+	text-shadow: 2px 2px 5px #000;
+	text-align: center;
+
 }
+
+.card4 p {
+	text-align: start;
+	color: black;
+	padding: 10px;
+	font-size: 25px;
+}
+
+iframe {
+	width: 200px;
+	height: 200px;
+	align-content: flex-start;
+}
+
+@media only screen and (min-width: 100px) and (max-width:480px) {
+	.card3 {
+		min-height: 10px;
+		width: 40%;
+		height: 50%;
+		font-size: 10%;
+		flex-wrap: wrap;
+	}
+
+	.card3 h3 {
+		font-size: xx-small;
+	}
+
+	.boton1 {
+		padding: 10px 10px;
+		color: black;
+		size-adjust: 5%;
+		font-size: xx-small;
+	}
+
+	.card4 {
+		min-height: 30px;
+		height: 400px;
+		width: 400px;
+		/* size-adjust:u */
+		flex-wrap: wrap;
+	}
+
+	.card4 h3 {
+		font-size: xx-small;
+	}
+
+	.card4 h4 {
+		font-size: xx-small;
+	}
+
+	.card4 p {
+		font-size: xx-small;
+	}
+
+	/* .card-img34 {
+		height:90px;
+		width: 90px;
+		background-size: cover;
+		background-position: center;
+	} */
+
+	iframe {
+		width: 50px;
+		height: 50px;
+		align-content: flex-start;
+	}
+
+	footer {
+		font-size: x-small
+	}
+
+}
+
+/*Tienda animación------------------------------*/
+
+.cubo {
+	height: 150px;
+	width: 150px;
+	position: relative;
+	transform-style: preserve-3d;
+	animation: rotar 5s infinite linear;
+	background-image: url(../multimedia/changuito.jpg);
+	background-size: cover;
+	display: inset-inline-end;
+}
+
+.cara {
+	position: absolute;
+	height: 100%;
+	width: 100%;
+	background-image: URL(../multimedia/HOTSALES.jpeg);
+	background-size: cover;
+	transform: translateZ(-90px);
+	display: inline-block;
+}
+
+@keyframes rotar {
+
+	from {
+		transform: rotateY(10deg);
+	}
+
+	to {
+		transform: rotateY(360deg);
+	}
+}
+
+/*Tenda divs------------------------------*/
+
+.tienda {
+	height: 100%;
+	width: 650px;
+	background-color: #E0EBA7;
+	display:flex;
+	flex-wrap:wrap;
+	padding: 20px;
+	gap: 20px;
+	font-weight: bold;
+
+}
+.tiendax{
+	height: 350px;
+	width: 250px;
+	background-color: #008FAD;
+	border: 1px solid black;
+	color: blanchedalmond;
+	text-shadow: #033a28;
+	text-align: center;
+	box-shadow: inset 0 0 5 px black;
+}
+.tiendax:hover {
+	filter: sepia(100%);
+    transform: scale(0.9);
+    transition: 0.9s;
+}
+.img1{
+	background-image: url(../multimedia/Tienda1.jpeg);
+	background-size:cover;
+	color: #033a28;
+	font-size:medium;
+	box-shadow: inset 0 0 5 px black;
+}
+
+.img2{
+	background-image: url(../multimedia/Tienda2.jpeg);
+	background-size:cover;
+	color: #033a28;
+	font-size:medium;
+}
+
+.img3{
+	background-image: url(../multimedia/Tienda\ 3.jpeg);
+	background-size:cover;
+	color: blanchedalmond;
+	font-size:large;
+
+}
+.img4{
+	background-image:url(../multimedia/ESTA.jpeg);
+	background-size:cover;
+	color: grey;
+	font-size:large;
+	text-shadow: #fff;
+	font-weight: bold;
+}
+.img5{
+	background-image:url(../multimedia/arreglo-plano-tela-jeans_23-2148876417.jpg);
+	background-size:cover;
+	color: #063928;
+	font-size:large;
+	text-shadow:greenyellow;
+	font-weight: bold;
+
+}
+.img6{
+	background-image:url(../multimedia/chicaconhilos.jpeg);
+	background-size:cover;
+	color: #033a28;
+	font-size:large;
+	text-shadow: #fff;
+}
+
