--- a/estilos.css
+++ b/estilos.css
@@ -1,192 +1,153 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-
-.navbar {
-    background-color: green;
+.navbar-nav {
+  font-family: "Lucida Sans";
+  font-size: medium;
 }
 
-.nav-link {
-    color: rgb(47, 255, 220) !important;
-    padding-left: 20px !important;
+.link {
+  color: #1CB895 !important;
+  padding-left: 20px !important;
 }
 
-.nav-link:hover {
-    color: rgb(47, 255, 220) !important;
-    font-weight: bold;
-    /* background-color: grey; */
-}
-
-.fa-bars {
-    color: aquamarine
-}
-
-.navbar-brand {
-    font-stretch: expanded;
-    text-decoration-line: inherit;
+.link:hover {
+  color: rgb(47, 255, 220) !important;
+  font-weight: bold;
+  background-color: grey;
 }
 
 .jumbotron {
-    background-image: linear-gradient(rgba(0, 255, 204, 0.5), rgba(33, 33, 24, 0.5)), url("./multimedia/telabanner.jpg");
-    background-position: center;
-    /* background-color: black; */
-    height: 250px;
-    color: rgb(2, 17, 20);
-    border-radius: 0;
-    margin-bottom: 0;
-    font-family: 'Lucida Sans';
+  background-image: linear-gradient(rgba(0, 255, 204, 0.5), rgba(33, 33, 24, 0.5));
+  height: 250px;
+  color: black;
+  border-radius: 0;
+  margin-bottom: 0;
+  font-family: "Lucida Sans";
+  font-size: xl-large;
 }
-
-.jumbotron p {
-    color: #fff;
-    font-family: 'Lucida Sans';
-}
-
-header {
-    background-color: grey;
-    height: 80px;
-    width: 100%;
-    /* display: flex; */
-    justify-content: space-between;
-    padding: 20px;
-    font-size: 27px;
-    font-family: 'Lucida Grande';
-    color: #fff;
-    text-shadow: 0 0 5px #000,
-        0 0 5px #000;
-}
-
 
 h2 {
-    text-align: center;
-    background-color: rgb(86, 174, 134);
-    background-origin: content-box;
-    color: #fff;
-    padding: 1PX;
-    margin-bottom: 0;
-    font-family: 'Lucida Sans';
-    font-size: large;
+  text-align: center;
+  background-color: rgb(86, 174, 134);
+  background-origin: content-box;
+  color: #fff;
+  padding: 3PX;
+  margin-bottom: 0;
+  font-family: "Lucida Sans";
+  font-size: large;
+  border-radius: unset;
+  border: 2px solid grey;
 }
-
-/* h2{     
-    
-    background-color: green;
-    color: black;
-    padding: 20px;
-    margin-bottom: 0;
-}*/
-
 
 .servicios {
-    height: 400px;
-    color: grey;
+  height: 400px;
+  width: 100%;
+  background-color: grey;
+  color: #fff;
+  padding: 2px;
 }
 
-.servicios .row {
-    height: 395px;
-    padding: 5px;
+.row {
+  height: 400px;
+  width: 100%;
+  background-color: grey;
+  color: black;
+  padding: 2px;
 }
-
 
 .nleft {
-    background-image: url(multimedia/mujer-sentada-estudio-coser-tela_1157-33781.jpg);
-    background-size: cover;
-    background-position: center;
-    size-adjust: unset;
-    padding: auto;
+  background-image: url(multimedia/mujer-sentada-estudio-coser-tela_1157-33781.jpg);
+  background-size: cover;
+  background-position: center;
+  size-adjust: unset;
+  padding: auto;
+  border: 2px solid #fff;
 }
 
-.nright h3 {
-    background-color: rgb(2, 17, 20);
-    text-align: center;
-    background-position: center;
-    padding: 10px;
-    border-width: 20px;
-    color: grey;
-    font-family: 'Lucida Sans';
-    font-size: large;
-    height: auto;
+h3 {
+  background-color: black;
+  text-align: center;
+  background-position: center;
+  padding: 10px;
+  color: grey;
+  font-family: "Lucida Sans";
+  font-size: large;
+  border: 2px solid #fff;
 }
 
 .nright p {
-    background-color: #02231f12;
-    text-align: justify;
-    background-position: center;
-    padding: 30px;
-    border-width: 20px;
-    color: grey;
-    font-family: 'Lucida Sans';
-    font-size: medium;
-    height: auto;
+  background-color: #008FAD;
+  text-align: justify;
+  background-position: center;
+  padding: 50px;
+  color: #fff;
+  font-family: "Lucida Sans";
+  font-size: large;
+  height: 280px;
+  border: 2px solid #fff;
 }
 
 .nleft2 {
-    background-image: url(multimedia/AdobeStock_14721611_Preview.jpeg);
-    background-size: cover;
-    background-position: center;
-    size-adjust: inherit;
-    height: 100%;
-    padding: auto;
+  background-image: url(multimedia/AdobeStock_14721611_Preview.jpeg);
+  background-size: cover;
+  background-position: center;
+  size-adjust: inherit;
+  height: 400px;
+  padding: auto;
+  border: 2px solid #fff;
 }
 
 .nleft3 {
-    background-image: url(multimedia/arreglo-plano-tela-jeans_23-2148876417.jpg);
-    background-size: cover;
-    background-position: center;
-    size-adjust: inherit;
-    height: 400px;
-    padding: auto;
+  background-image: url(multimedia/arreglo-plano-tela-jeans_23-2148876417.jpg);
+  background-size: cover;
+  background-position: center;
+  size-adjust: inherit;
+  height: 400px;
+  padding: auto;
+  border: 2px solid #fff;
 }
 
 .btn-warning {
-    background-color: #00d089;
-    border-radius: 0%;
+  background-color: #00d089;
+  border-radius: 0%;
 }
 
-.btn-warning hover {
-    transform: scale(10);
-    transition: cubic-bezier(0.075, 0.82, 0.165, 1);
+.btn-warning:hover {
+  transform: scale(10);
+  transition: cubic-bezier(0.075, 0.82, 0.165, 1);
 }
-
-/* .item{
-    height: 250px;
-    background-color: #333;
-    border: 5px solid yellow;
-    background-image: url(img/cherries-g17c80d496_1920.jpg);
-    background-position: center;
-    background-size: cover; */
-
 
 .item {
-    height: 200px;
-    width: 100%;
-    border: 2px solid #fff;
-    background-color: #444;
-    background-size: cover;
-    background-position: center;
-    filter: sepia(0%);
-    transition: all 0.9s;
+  height: 400px;
+  width: 100%;
+  border: 2px solid #fff;
+  background-color: #444;
+  background-size: cover;
+  background-position: center;
+  filter: sepia(0%);
+  transition: all 0.9s;
 }
 
 .item:hover {
-    filter: sepia(100%);
-    transform: scale(0.9);
-    transition: 0.9s;
+  filter: sepia(100%);
+  transform: scale(0.9);
+  transition: 0.9s;
 }
 
 .item1 {
-    background-image: url(multimedia/Tienda1.jpeg);
+  background-image: url(multimedia/Tienda1.jpeg);
 }
 
 .item2 {
-    background-image: url(multimedia/Tienda2.jpeg);
+  background-image: url(multimedia/Tienda2.jpeg);
 }
 
 .item3 {
-    background-image: url(multimedia/Tienda\ 3.jpeg);
+  background-image: url(multimedia/Tienda\ 3.jpeg);
 }
 
 /* .item {
@@ -197,8 +158,6 @@ h2 {
         background-position: center;
         background-size: cover;
     } */
-
-
 /* h2 {
         border: 2px solid #fff;
         color: rgb(100, 100, 100);
@@ -208,224 +167,209 @@ h2 {
         font-weight: hold;
         text-decoration: none;
     } */
-
 ul li {
-    color: #00d089;
-    text-decoration: underline;
-}
-
-table {
-    border: 1;
-    font-size: 70%;
-    font-style: inherit;
-    font-weight: inherit;
-    margin: 10;
-    outline: 10;
-    padding: 10;
-    vertical-align: middle;
-    background-size: cover;
-    background-position: left;
-    display: inline-flexbox;
-    margin: 50px;
+  color: #00d089;
+  text-decoration: underline;
 }
 
 tr {
-    background-color: aquamarine;
-    background-position: center;
+  background-color: aquamarine;
+  background-position: center;
 }
 
 th {
-    background-color: bisque;
-    background-position: center;
+  background-color: bisque;
+  background-position: center;
 }
-
 
 body {
-    color: grey;
-    font-family: serif;
-    font-size: 100%;
-    line-height: 1.3;
-    background-color: none;
+  color: grey;
+  font-family: serif;
+  font-size: 100%;
+  line-height: 1.3;
+  background-color: none;
 }
-
-section {
-    font-family: serif;
-}
-
-
-
 
 .fondo {
-    width: 500px;
-    height: auto;
+  width: 500px;
+  height: auto;
 }
 
 .alineado {
-    width: 500px;
-    height: auto;
+  width: 500px;
+  height: auto;
 }
 
 .aladerecha {
-    text-align: right;
+  text-align: right;
 }
 
 .img {
-    height: 200px;
-    width: 300px;
-    background-color: antiquewhite;
-    background-image: url(Multimedia/traenos\ lo\ qeu\ no\ usas\ clothes-gc37488806_1280.jpg);
-    background-repeat: no-repeat;
-    background-position: right center;
-    border: 10;
-    margin-left: 50px;
+  height: 200px;
+  width: 300px;
+  background-color: antiquewhite;
+  background-image: url(Multimedia/traenos\ lo\ qeu\ no\ usas\ clothes-gc37488806_1280.jpg);
+  background-repeat: no-repeat;
+  background-position: right center;
+  border: 10;
+  margin-left: 50px;
 }
 
 iframe {
-    border: 10 solid g;
-    margin-left: 50px;
-    border: 5px solid #00d089;
+  border: 10 solid g;
+  margin-left: 50px;
+  border: 5px solid #00d089;
 }
 
 section img {
-    height: 200px;
-    width: 300px;
-    background-color: antiquewhite;
-    background-image: url(Multimedia/traenos\ lo\ qeu\ no\ usas\ clothes-gc37488806_1280.jpg);
-    background-repeat: no-repeat;
-    background-position: right;
-    border: 10;
-    margin-left: 50px;
-    border: 5px solid burlywood;
+  height: 200px;
+  width: 300px;
+  background-color: antiquewhite;
+  background-image: url(Multimedia/traenos\ lo\ qeu\ no\ usas\ clothes-gc37488806_1280.jpg);
+  background-repeat: no-repeat;
+  background-position: right;
+  border: 10;
+  margin-left: 50px;
+  border: 5px solid burlywood;
 }
 
 .centrado {
-    text-align: center;
+  text-align: center;
 }
 
 nav {
-    text-decoration: dashed;
-    color: grey;
-    font-family: serif;
-    font-size: 100%;
-    line-height: 1.3;
+  -webkit-text-decoration: dashed;
+          text-decoration: dashed;
+  color: grey;
+  font-family: serif;
+  font-size: 100%;
+  line-height: 1.3;
 }
 
 .marquee {
-    background-color: grey;
-    font-family: serif;
-    font-size: 100%;
-    line-height: 1.2;
-    color: ghostwhite;
-    box-sizing: auto;
-
+  background-color: grey;
+  font-family: serif;
+  font-size: 100%;
+  line-height: 1.2;
+  color: ghostwhite;
+  box-sizing: auto;
 }
 
 p {
-    font-size: 1rem;
-    text-decoration: solid;
-    font-family: calibri;
+  font-size: 1rem;
+  -webkit-text-decoration: solid;
+          text-decoration: solid;
+  font-family: calibri;
 }
 
 .parrafo2 {
-    background-color: azure;
-    width: 500px;
-    height: auto;
-    background-position: left;
-    display: inline-block;
-    text-align: justify;
+  background-color: azure;
+  width: 500px;
+  height: auto;
+  background-position: left;
+  display: inline-block;
+  text-align: justify;
 }
 
 footer {
-    background-color: grey;
-    color: #fff;
-    width: 100%;
-    height: auto;
-    padding: 20px;
-    text-align: center;
-    font-size: small;
-    font-style: italic;
-    text-decoration: underline;
+  background-color: grey;
+  color: #fff;
+  width: 100%;
+  height: auto;
+  padding: 20px;
+  text-align: center;
+  font-size: small;
+  font-style: italic;
+  text-decoration: underline;
 }
 
 .redes {
-    background-color: #000;
+  background-color: #000;
 }
 
 footer a {
-    color: #00d089;
-    letter-spacing: 15px;
-    align-items: flex-start;
+  color: #00d089;
+  letter-spacing: 15px;
+  align-items: flex-start;
 }
 
-@media only screen and (min-width: 100px) and (max-width:500px) {
-    .jumbotron {
-        background-image: linear-gradient(rgba(0, 255, 204, 0.5), rgba(33, 33, 24, 0.5)), url("./multimedia/telabanner.jpg");
-        background-position: center;
-        height: 300px;
-        width: 100%;
-        border-radius: 0;
-        margin-bottom: 0;
-        font-size: small;
-    }
-
-    .jumbotron p {
-        font-size: x-small;
-    }
-
-    h2{
-        font-size: small;
-    }
-    article {
-        font-size: small;
-    }
-    h3 {
-        font-size: x-small;
-    }
-    aside {
-        font-size: x-small;
-    }
-
-    p {
-        font-size: x-small;
-    }
-    .servicios {
-        height: 100px;
-        padding:none;  
-    }
-    .servicios .row {
-        height: 50px;
-        padding: 1px;
-    }
-    .nleft{
-        height: 100px;
-        padding: 1px;
-        
-    }
-    .nleft2{
-        height: 100px;
-        padding: 1px;
-        display: inline-block;
-    }
-    .nleft3{
-        height: 100px;
-        padding: 1px;
-        display: inline-block;
-    }
-    .nleft4{
-        height: 100px;
-        padding: 1px;
-        display: inline-block;
-}
-    .nright {
-        height: 20px;
-        padding: 1px;
-    }
-        
-    .nright h3{
-        font-size:small;
-    }
-    .nright p{
-        font-size:small;
-    }
-
-}
+@media only screen and (min-width: 100px) and (max-width: 500px) {
+  .jumbotron {
+    background-image: linear-gradient(rgba(0, 255, 204, 0.5), rgba(33, 33, 24, 0.5)), url("./multimedia/telabanner.jpg");
+    background-position: center;
+    height: 200px;
+    width: 100%;
+    border-radius: 0;
+    margin-bottom: 0;
+    font-size: small;
+  }
+  .jumbotron p {
+    font-size: x-small;
+  }
+  .servicios {
+    height: 20px;
+    width: 100%;
+    background-color: grey;
+    color: #fff;
+    padding: 2px;
+  }
+  .servicios {
+    display: inline-block;
+  }
+  .row {
+    height: 300px;
+    width: 100%;
+    background-color: grey;
+    color: black;
+    padding: 2px;
+  }
+  h3 {
+    height: 50px;
+    width: 500%;
+    background-color: grey;
+    color: black;
+    padding: 2px;
+  }
+  h3 {
+    font-size: x-small;
+  }
+  .nright {
+    height: 50px;
+    width: 500%;
+    background-color: grey;
+    color: black;
+    padding: 2px;
+  }
+  nright p {
+    height: 50px;
+    width: 100%;
+    background-color: grey;
+    color: black;
+    padding: 2px;
+  }
+  .nleft {
+    height: 50px;
+    width: 50%;
+    background-color: grey;
+    color: black;
+    padding: 2px;
+  }
+  .nleft2 {
+    height: 50px;
+    width: 25%;
+    background-color: grey;
+    color: black;
+    padding: 2px;
+  }
+  .nleft3 {
+    height: 50px;
+    width: 25%;
+    background-color: grey;
+    color: black;
+    padding: 2px;
+  }
+  .item {
+    height: 30px;
+    width: 30%;
+  }
+}/*# sourceMappingURL=estilos.css.map */
