--- a/estilos.css
+++ b/estilos.css
@@ -40,7 +40,7 @@ h2 {
   font-family: "Lucida Sans";
   font-size: large;
   border-radius: unset;
-  border: 2px solid grey;
+  border: 10px solid grey;
 }
 
 .servicios {
@@ -64,50 +64,53 @@ h2 {
   background-size: cover;
   background-position: center;
   size-adjust: unset;
-  padding: auto;
+  padding: 10px;
   border: 2px solid #fff;
 }
 
 h3 {
-  background-color: black;
+  background-color: #008FAD;
   text-align: center;
   background-position: center;
   padding: 10px;
-  color: grey;
+  color: #fff;
   font-family: "Lucida Sans";
   font-size: large;
   border: 2px solid #fff;
 }
 
-.nright p {
-  background-color: #008FAD;
+.nright1 {
+  background-color: black;
   text-align: justify;
   background-position: center;
-  padding: 50px;
+  padding: 10px;
   color: #fff;
   font-family: "Lucida Sans";
   font-size: large;
   height: 280px;
   border: 2px solid #fff;
+  font-size: 1rem;
+  -webkit-text-decoration: solid;
+          text-decoration: solid;
+  overflow-wrap: break-word;
+}
+
+p {
+  overflow-wrap: break-word;
+  font-size: small;
 }
 
 .nleft2 {
   background-image: url(multimedia/AdobeStock_14721611_Preview.jpeg);
-  background-size: cover;
   background-position: center;
-  size-adjust: inherit;
   height: 400px;
-  padding: auto;
   border: 2px solid #fff;
 }
 
 .nleft3 {
   background-image: url(multimedia/arreglo-plano-tela-jeans_23-2148876417.jpg);
-  background-size: cover;
   background-position: center;
-  size-adjust: inherit;
   height: 400px;
-  padding: auto;
   border: 2px solid #fff;
 }
 
@@ -117,7 +120,7 @@ h3 {
 }
 
 .btn-warning:hover {
-  transform: scale(10);
+  transform: scale(1.1);
   transition: cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
@@ -150,23 +153,6 @@ h3 {
   background-image: url(multimedia/Tienda\ 3.jpeg);
 }
 
-/* .item {
-        height: 250px;
-        background-color: #333;
-        border: 5px solid yellow;
-        background-image: url(img/cherries-g17c80d496_1920.jpg);
-        background-position: center;
-        background-size: cover;
-    } */
-/* h2 {
-        border: 2px solid #fff;
-        color: rgb(100, 100, 100);
-        font-family: serif;
-        font-size: 1.5rem;
-        padding: 10px;
-        font-weight: hold;
-        text-decoration: none;
-    } */
 ul li {
   color: #00d089;
   text-decoration: underline;
@@ -190,53 +176,6 @@ body {
   background-color: none;
 }
 
-.fondo {
-  width: 500px;
-  height: auto;
-}
-
-.alineado {
-  width: 500px;
-  height: auto;
-}
-
-.aladerecha {
-  text-align: right;
-}
-
-.img {
-  height: 200px;
-  width: 300px;
-  background-color: antiquewhite;
-  background-image: url(Multimedia/traenos\ lo\ qeu\ no\ usas\ clothes-gc37488806_1280.jpg);
-  background-repeat: no-repeat;
-  background-position: right center;
-  border: 10;
-  margin-left: 50px;
-}
-
-iframe {
-  border: 10 solid g;
-  margin-left: 50px;
-  border: 5px solid #00d089;
-}
-
-section img {
-  height: 200px;
-  width: 300px;
-  background-color: antiquewhite;
-  background-image: url(Multimedia/traenos\ lo\ qeu\ no\ usas\ clothes-gc37488806_1280.jpg);
-  background-repeat: no-repeat;
-  background-position: right;
-  border: 10;
-  margin-left: 50px;
-  border: 5px solid burlywood;
-}
-
-.centrado {
-  text-align: center;
-}
-
 nav {
   -webkit-text-decoration: dashed;
           text-decoration: dashed;
@@ -253,22 +192,6 @@ nav {
   line-height: 1.2;
   color: ghostwhite;
   box-sizing: auto;
-}
-
-p {
-  font-size: 1rem;
-  -webkit-text-decoration: solid;
-          text-decoration: solid;
-  font-family: calibri;
-}
-
-.parrafo2 {
-  background-color: azure;
-  width: 500px;
-  height: auto;
-  background-position: left;
-  display: inline-block;
-  text-align: justify;
 }
 
 footer {
@@ -293,83 +216,64 @@ footer a {
   align-items: flex-start;
 }
 
-@media only screen and (min-width: 100px) and (max-width: 500px) {
-  .jumbotron {
-    background-image: linear-gradient(rgba(0, 255, 204, 0.5), rgba(33, 33, 24, 0.5)), url("./multimedia/telabanner.jpg");
-    background-position: center;
-    height: 200px;
-    width: 100%;
-    border-radius: 0;
-    margin-bottom: 0;
-    font-size: small;
-  }
-  .jumbotron p {
-    font-size: x-small;
-  }
+@media only screen and (max-width: 576px) {
   .servicios {
-    height: 20px;
     width: 100%;
-    background-color: grey;
-    color: #fff;
-    padding: 2px;
-  }
-  .servicios {
-    display: inline-block;
   }
   .row {
-    height: 300px;
     width: 100%;
-    background-color: grey;
-    color: black;
-    padding: 2px;
   }
-  h3 {
-    height: 50px;
-    width: 500%;
-    background-color: grey;
-    color: black;
-    padding: 2px;
+  aside {
+    width: 50% !important;
+    height: 50% !important;
+    margin-bottom: 10px;
+    display: inline-block;
+    background-position-y: center;
+    flex-wrap: wrap;
   }
-  h3 {
-    font-size: x-small;
+}
+@media only screen and (max-width: 576px) {
+  .row .item {
+    width: 100% !important;
+    margin-bottom: 10px !important;
+    flex-wrap: wrap;
   }
-  .nright {
-    height: 50px;
-    width: 500%;
-    background-color: grey;
-    color: black;
-    padding: 2px;
-  }
-  nright p {
-    height: 50px;
+}
+@media only screen and (max-width: 576px) {
+  .servicios {
     width: 100%;
-    background-color: grey;
-    color: black;
-    padding: 2px;
+    margin-bottom: 10px;
+    min-height: 50%;
   }
-  .nleft {
-    height: 50px;
-    width: 50%;
-    background-color: grey;
-    color: black;
-    padding: 2px;
-  }
+}
+@media only screen and (max-width: 576px) {
+  .nleft,
+  .nright1,
   .nleft2 {
-    height: 50px;
-    width: 25%;
-    background-color: grey;
-    color: black;
-    padding: 2px;
+    width: 50%;
+    flex-wrap: wrap;
   }
   .nleft3 {
-    height: 50px;
-    width: 25%;
-    background-color: grey;
-    color: black;
-    padding: 2px;
+    width: 50%;
+    display: flex;
+    flex-wrap: wrap;
   }
-  .item {
-    height: 30px;
-    width: 30%;
+  .nleft3 {
+    order: 1;
+    flex-wrap: wrap;
+  }
+  .nright1 {
+    order: 2;
+    flex-wrap: wrap;
+  }
+  p {
+    width: 50%;
+    height: 50%;
+    flex-wrap: wrap;
+  }
+  h3 {
+    width: 50%;
+    height: 50%;
+    flex-wrap: wrap;
   }
 }/*# sourceMappingURL=estilos.css.map */
